--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -59,7 +59,7 @@
   <nav>
     <ul>
       <li><a href="#">Datos</a></li>
-      <li><a href="/camara">Cámara</a></li>
+      <li><a href="/video_feed">Cámara</a></li>
     </ul>
   </nav>
 
