--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -68,7 +68,7 @@
     <h2>Prevision del tiempo</h2>
     <p>Prevision hoy: {{ contenido_hoy }} y {{contenido1_hoy}} </p>
     <p>Prevision mañana: {{ contenido_mañana }} y {{contenido1_mañana}} </p>
-    <p>Prevision pasado mñana: {{ contenido_pasadomañana }} y {{contenido1_pasadomañana}} </p>
+    <p>Prevision pasado mañana: {{ contenido_pasadomañana }} y {{contenido1_pasadomañana}} </p>
   </section>
 
 </body>
