--- a/templates/camara.html
+++ b/templates/camara.html
@@ -49,6 +49,10 @@
       height: auto;
       border-radius: 10px;
     }
+
+    .activo{
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -60,12 +64,12 @@
     <ul>
       <li><a href="/">Inicio</a></li>  
       <li><a href="/temperaturayhumedad">Datos</a></li>
-      <li><a href="/video_feed">Cámara</a></li>
+      <li><a href="/video_feed" class="activo">Cámara</a></li>
     </ul>
   </nav>
 
   <section>
-    <h2>Camara</h2>
+    <h1>Camara</h2>
   </section>
 
 </body>
