--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -49,6 +49,11 @@
       height: auto;
       border-radius: 10px;
     }
+
+    .activo{
+      text-decoration: underline;
+    }
+
   </style>
 </head>
 <body>
@@ -58,7 +63,7 @@
 
   <nav>
     <ul>
-      <li><a href="/">Inicio</a></li>  
+      <li><a href="/" class="activo">Inicio</a></li>  
       <li><a href="/temperaturayhumedad">Datos</a></li>
       <li><a href="/video_feed">Cámara</a></li>
     </ul>
